<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.xiongxinxiao.tipcalculatorpro.HomeActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:textSize="40sp"
        android:textStyle="italic"
        android:textColor="@color/textColor"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/billAmount"
        android:id="@+id/textView2"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/textColor"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipPercentage"
        android:id="@+id/textView3"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/textColor"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numberOfPeople"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/textColor"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="19dp"
        android:id="@+id/button"
        android:text="@string/caculate"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:textStyle="italic"
        />

    <EditText
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:id="@+id/editText3"
        android:background="#ff0"
        android:inputType="numberDecimal"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignStart="@+id/editText2" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:id="@+id/editText2"
        android:background="#ff0"
        android:inputType="numberDecimal"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignStart="@+id/editText" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginEnd="21dp"
        android:id="@+id/editText"
        android:background="#ff0"
        android:inputType="numberDecimal"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:text="@string/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/textView6"
        android:textSize="20sp"
        android:textStyle="italic"

        android:textColor="@color/textColor"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:inputType="number"
        android:textColor="@color/colorPrimary"
        android:ems="10"
        android:id="@+id/editText4"
        android:background="#ff0000"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignStart="@+id/editText3"
        android:layout_alignEnd="@+id/textView" />


</RelativeLayout>
